# TasteOfHFT

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: .conan.cmake.swp
include/: Lib.h
libs/: CMakeLists.txt  README.md
libs/BroadcastQueue/: CMakeLists.txt
libs/BroadcastQueue/include/: BroadcastQueue.hpp
libs/BroadcastQueue/tests/: BroadcastQueueTest.cpp
libs/trariti/: CMakeLists.txt
libs/trariti/include/: Trariti.h  TraritiCore.h  TraritiImpl.h
libs/trariti/src/: Trariti.cpp  TraritiImpl.cpp
libs/trariti/tests/: LibTest.cpp  TraritiQueueTest.cpp
scripts/: build.sh  clang-format.sh  clang-tidy.sh
src/: Lib.cpp
tests/: LibTest.cpp
